[package]
name = "rokrs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
ssdp-client = "1.0.0"
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.5.1"
reqwest = "0.11.5"
regex = "1.5.4"